add audit logs to daemon
